--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h2>About Me</h2>
                     <p>I'm a 27-year-young student in Communication & Multimedia Design and I create YouTube & Twitch content in my free time. (Currently at ~50.000 Subscribers) </p>
                     <p>My goal is to combine the best of these two worlds so I can build my own digital platform and have all my viewers in one place.</p>
-                    <a href="https://github.com/AvankoNL/vannaka_2021/blob/main/cv_anthonyvankommer_2021.pdf" target="_blank">Download CV</a>
+                    <a href="https://gusty-cyclamen-1d6.notion.site/CV-873932483f4f425a8a9d220b43782536" target="_blank">Download CV</a>
                 </article>
             </div>
 </section>
