--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
                 <article class="box2">
                     <h2>About Me</h2>
-                    <p>I'm a 27-year-young student in Communication & Multimedia Design and I create YouTube & Twitch content in my free time. (Currently at ~50.000 Subscribers) </p>
-                    <p>My goal is to combine the best of these two worlds so I can build my own digital platform and have all my viewers in one place.</p>
+                    <p>After graduating in Communication & Multimedia Design at Hogeschool van Amsterdam, I started a full time business in YouTube & Twitch content creation. (Currently ~60.000 Subscribers) </p>
+                    <p>One day I'd love to build my own digital platform and have all my content and viewers in one place.</p>
                     <a href="https://gusty-cyclamen-1d6.notion.site/CV-873932483f4f425a8a9d220b43782536" target="_blank">Download CV</a>
                 </article>
             </div>
@@ -113,7 +113,7 @@
                         <h3>YouTube</h3>
                         <img src="img/youtube.png" alt="YouTube Icon">
                         <p>60K+ Subscribers</p>
-                        <p>3M+ Views</p>
+                        <p>7M+ Views</p>
                         <p>400K+ Hours Watched</p>
                     </article>
                 </a>
@@ -124,7 +124,7 @@
                         <img src="img/twitch.png" alt="Twitch Icon">
                         <p>10K+ Followers</p>
                         <p>100K+ (Live) Views</p>
-                        <p>200+ Hours Streamed</p>
+                        <p>500+ Hours Streamed</p>
                 </article>
                 </a>
             </div>
@@ -135,8 +135,8 @@
             <div class="flexanimation">
                 <article class="ani">
                     <h2>Animation</h2>
-                    <p>My unique selling point is to draw and animate monsters, characters and objects from the online game Old School
-                        RuneScape. This way the community recognises my videos right away, which helps increasing the Awareness.</p>
+                    <p>I brought my channel to life by drawing and animating monsters, characters and objects from the online game Old School
+                        RuneScape. This way the community recognises my videos right away, which became my Unique Selling Point.</p>
 
                     <p>With the animations I want to give my viewers a quick taste of what's going to happen in the video. Some animations are funny, where others can give a peaceful or epic feel.  </p>
 
